# fastapi_breasts_cancer

./: README.md  fr_model_20251229_181516.pkl  main.py  model_production_full.pkl  model_production_full.py  model_risk_screening-improving.py  model_risk_screening.pkl  naive_bayes_FULL_20251229_183259.pkl  pyproject.toml
