[project]
name = "api-deteksi-kanker-payudara"
version = "4.0.0"
description = "API Deteksi Kanker Payudara dengan 2 model"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
